further styling changes

--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 <body>
     <div class="main">
         <div class="sidebar">
+            <div class="spacer"></div>
             <header class="header">
-                <img src="images/stormlight-logo.jpeg" alt="logo for the stormlight archive" id="stormlight">
+                <img src="images/Stormlight_Archive_Logo.png" alt="logo for the stormlight archive" id="stormlight">
                 <h1>UNITE THEM</h1>
             </header>
+            <div class="spacer"></div>
             <footer class="smallFont">Photo by <a href="https://lamaery.tumblr.com/">Lamaery</a> on 
                 <a href="https://lamaery.tumblr.com/post/657352434000265216/unity-part-2-always-the-next-step">Tumblr</a> </footer>
         </div>
+
         <div class="container">
             <div class="message">
                 <b>
-                    <p>YOU HAVE SHOWN GREAT DARING DURING THESE DOOMFUL DAYS. </p>
+                    <p>THE VOIDBRINGERS HAVE RETURNED. </p>
+                    <p>THE ANCIENT OATHS MUST BE SPOKEN AGAIN.</p>
                     <p>COME, JOIN US AT THE TOWER.</p>
-                    <p>TOGETHER WE WILL DEFEAT THE VOID.</p>
                     <p>TOGETHER WE WILL RETAKE THE TRANQUILINE HALLS.</p>
                 </b>
             </div>
@@ -59,9 +62,12 @@
                     </form>
                 </div>
             </div>
+
             <div class="submit">
                 <button type="submit">JOIN US</button>
-                <div class="smallFont">already have an account? <a href="example.com">login</a></div>
+                <div class="smallFont">already have an account? 
+                    <a href="https://www.brandonsanderson.com/the-stormlight-archive-series/" class="link">log in</a>
+                </div>
             </div>
         </div>
     </div>
